slurm_output/slurm-5077.out
Traceback (most recent call last):
  File "/home/cme/MixEncoder/nlp_main.py", line 5, in <module>
    from nlp_trainer import TrainWholeModel
  File "/home/cme/MixEncoder/nlp_trainer.py", line 2159
    )
    ^
SyntaxError: positional argument follows keyword argument
